objects/PDK_Erro_Logger__c.object
<CustomObject>
    <description>This object logs all exceptions occurred in FV_DocumentProvisioningService.</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Msg__c</fullName>
        <label>Error Msg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <label>Module Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PDK Erro Logger</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Error_Msg__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Module_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PDK Erro Logger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDK Erro Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>